<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_2"
    tools:context=".RegistrationActivity">

    <Button
        android:id="@+id/help_button2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_help_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/registration_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_background"
        android:fontFamily="serif"
        android:text="@string/sign_up"
        android:textColor="#FDF3E9"
        android:textSize="60sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <TextView
        android:id="@+id/rbox"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/light_backgroud"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <TextView
        android:id="@+id/fNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="#512D18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rbox"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/lNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_name"
        android:textColor="#512D18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameView"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textColor="#512D18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lNameView"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/pNumberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="#512D18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailView"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/addressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#512D18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pNumberView"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/passWView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#512D18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressView"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/rPassWView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="#512D18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passWView"
        app:layout_constraintVertical_bias="0.125" />

    <CheckBox
        android:id="@+id/conditionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_all_terms_and_conditions"
        android:textColor="#512D18"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rbox"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/fnameInput"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginEnd="9dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:ems="20"
        android:hint="@string/david"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textColorHint="#F2D2BD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="@+id/rbox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fNameView"
        app:layout_constraintTop_toTopOf="@+id/rbox"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/lnameInput"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:ems="20"
        android:hint="@string/perera"
        android:textColorHint="#F2D2BD"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/conditionCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toEndOf="@+id/lNameView"
        app:layout_constraintTop_toBottomOf="@+id/fnameInput"
        app:layout_constraintVertical_bias="0.027"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/david_perera_gmail_com"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textColorHint="#F2D2BD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/emailView"
        app:layout_constraintTop_toBottomOf="@+id/lnameInput"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/_07"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textColorHint="#F2D2BD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pNumberView"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginEnd="2dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:ems="10"
        android:textColorHint="#F2D2BD"
        android:hint="@string/no_23_peris_rd_nawala"
        android:inputType="textPostalAddress"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toEndOf="@+id/addressView"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput"
        app:layout_constraintVertical_bias="0.074"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/pWInput"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginEnd="2dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:ems="10"
        android:textColorHint="#F2D2BD"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toEndOf="@+id/passWView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        app:layout_constraintVertical_bias="0.074"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <EditText
        android:id="@+id/rEPWInput"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:autofillHints=""
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="#512D18"
        android:textColorHint="#F2D2BD"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/conditionCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/rPassWView"
        app:layout_constraintTop_toBottomOf="@+id/pWInput"
        app:layout_constraintVertical_bias="0.291"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sign_up"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbox"
        app:layout_constraintVertical_bias="0.415"
        app:rippleColor="#512D18"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Cancel"
        android:textAlignment="center"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toEndOf="@+id/signupbtn"
        app:layout_constraintTop_toBottomOf="@+id/rbox"
        app:layout_constraintVertical_bias="0.423"
        app:rippleColor="#512D18"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>