<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotLButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_2"
    tools:context=".Activity_Login">

    <Button
        android:id="@+id/helpButton1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_help_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/light_backgroud"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/usenameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Email"
        android:textSize="24sp"
        android:textColor="#512D18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginBox" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="84dp"
        android:text="@string/password"
        android:textColor="#512D18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginBox"
        app:layout_constraintStart_toStartOf="@+id/loginBox" />

    <Button
        android:id="@+id/loginPageButton"
        android:layout_width="130dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBox"
        app:layout_constraintVertical_bias="0.139"
        app:rippleColor="#512D18" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/dark_background"
        android:fontFamily="casual"
        android:text="@string/are_you_new"
        android:textColor="#F5E1CD"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPageButton"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/signInLpageButton"
        android:layout_width="154dp"
        android:layout_height="56dp"
        android:background="#00FFFFFF"
        android:fontFamily="serif"
        android:text="@string/signin"
        android:textSize="23sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPageButton"
        app:layout_constraintVertical_bias="0.259" />

    <Button
        android:id="@+id/forgotPwButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="serif"
        android:text="@string/forgot_password"
        android:textColor="#512D18"
        android:textColorHighlight="#512D18"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dark_background"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textColor="#FDF3E9"
        android:textSize="80sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/loginBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="220dp"
        android:layout_height="39dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/text_box"
        android:ems="20"
        android:hint="Enter Password..."
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:textColor="#512D18"
        android:textColorHint="#F2D2BD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="@+id/loginBox" />

    <EditText
        android:id="@+id/userNameInputText"
        android:layout_width="220dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_box"
        android:ems="20"
        android:hint="@string/david_perera_gmail_com"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:textColor="#512D18"
        android:textColorHint="#F2D2BD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="@+id/loginBox"
        app:layout_constraintTop_toTopOf="@+id/loginBox" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="130dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Cancel"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/loginPageButton"
        app:layout_constraintTop_toBottomOf="@+id/loginBox"
        app:layout_constraintVertical_bias="0.139"
        app:rippleColor="#512D18" />

</androidx.constraintlayout.widget.ConstraintLayout>