<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_2"
    tools:context=".ForgetPassword">

    <Button
        android:id="@+id/notButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/ic_baseline_calendar_view_day_24"
        app:layout_constraintBottom_toTopOf="@+id/ForgotTopic"
        app:layout_constraintEnd_toStartOf="@+id/backButton2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_baseline_back_arrow_24"
        android:scaleX="-1"
        app:layout_constraintBottom_toTopOf="@+id/ForgotTopic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ForgotTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/dark_background"
        android:fontFamily="serif"
        android:text="@string/forgot_password1"
        android:textColor="#FDF3E9"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotBox"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="356dp"
        android:background="@drawable/light_backgroud"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotTopic"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forgetNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/enter_your_email"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/forgotBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgotBox"
        app:layout_constraintVertical_bias="0.205" />



    <Button
        android:id="@+id/submitButton"
        android:layout_width="120dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="288dp"
        android:backgroundTint="#FDF3E9"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/submit"
        android:textColor="#512D18"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotBox"  />

    <EditText
        android:id="@+id/emailInputText"
        android:layout_width="353dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/text_box"
        android:textSize="20dp"
        android:paddingLeft="12dp"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="311dp"
        app:layout_constraintBottom_toBottomOf="@+id/forgotBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetNameText"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>